--- a/package.json
+++ b/package.json
@@ -21,21 +21,24 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "express": "^4.18.2",
-    "whatsapp-web.js": "^1.23.0",
-    "qrcode": "^1.5.3",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "googleapis": "^164.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "qrcode": "^1.5.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "body-parser": "^1.20.2",
-    "node-cron": "^3.0.3",
-    "multer": "^1.4.5-lts.1",
-    "xlsx": "^0.18.5",
-    "csv-parser": "^3.0.0"
+    "whatsapp-web.js": "^1.23.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
-
