--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "googleapis": "^164.0.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.25",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "qrcode": "^1.5.3",
